# data-platform

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
dbt/: Dockerfile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt/models/staging/: staging.yml  stg_wikipedia_page_events.sql
jobs/extract/wikipedia/: Dockerfile  README.md  pyproject.toml
jobs/extract/wikipedia/src/job/: config.py  main.py
jobs/extract/wikipedia/src/job/core/: event.py  exceptions.py  metadata.py  model.py
jobs/extract/wikipedia/src/job/lib/: github.py  logger.py  metadata.py  parquetutils.py  s3.py  wikipedia.py
jobs/load/wikipedia/: Dockerfile  README.md  pyproject.toml
jobs/load/wikipedia/src/job/: config.py  main.py
jobs/load/wikipedia/src/job/core/: exceptions.py
jobs/load/wikipedia/src/job/lib/: parquetutils.py  postgres.py  s3.py  sink.py  warehouse.py
jobs/load/wikipedia/tests/: test_wikipedia_page_changes_writer.py
orchestration/: Dockerfile  README.md  pyproject.toml
orchestration/dags/: github_data_model.py  wikipedia_page_activity_data_model.py
platform/airflow/: serviceAccount.yaml  values.yaml
platform/cluster/: kind-config.yaml  storageclass.yaml
platform/minio/: deployment.yaml  minio-extract-policy.json  minio-load-policy.json
platform/postgres/: deployment.yaml
