[tool.poetry]
name = "load"
version = "0.1.0"
description = "Loads partitioned Wikipedia parquet files from Object Storage into Postgres"
authors = ["Your Name <you@example.com>"]
packages = [{include="*", from="src"}]

[tool.poetry.scripts]
app_main = "job.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.30"
pyarrow = ">=15, <21"
psycopg = {version = "^3.2.9", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
isort = "^8.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.poetry.group.lint.dependencies]
black = "^26.1.0"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
